--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby-plugin-nprogress": "4.2.0",
     "gatsby-plugin-offline": "5.2.0",
     "gatsby-plugin-react-helmet": "5.2.0",
+    "gatsby-plugin-sass": "^5.3.0",
     "gatsby-plugin-sharp": "4.2.0",
     "gatsby-plugin-styled-components": "5.2.0",
     "gatsby-source-filesystem": "4.2.0",
@@ -24,6 +25,7 @@
     "react-pure-modal": "^2.1.0",
     "react-reveal": "latest",
     "react-scroll-parallax": "^2.4.0",
+    "sass": "^1.44.0",
     "styled-components": "5.3.3",
     "typing-effect-reactjs": "latest"
   },
