--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "tomeksite",
+  "name": "thetrashchallenge",
   "private": true,
-  "version": "0.0.1",
-  "author": "Tomek <tomekbotwicz@pm.me>",
+  "version": "0.2.0",
+  "author": "Tomek <hey@tomek.org>",
   "dependencies": {
-    "gatsby": "4.8.0",
-    "gatsby-plugin-image": "2.8.0",
-    "gatsby-plugin-manifest": "4.8.0",
-    "gatsby-plugin-nprogress": "4.8.0",
-    "gatsby-plugin-offline": "5.8.0",
-    "gatsby-plugin-react-helmet": "5.8.0",
-    "gatsby-plugin-sass": "^5.8.0",
-    "gatsby-plugin-sharp": "4.8.0",
-    "gatsby-plugin-styled-components": "5.8.0",
-    "gatsby-transformer-sharp": "4.8.0",
-    "react": "latest",
-    "react-dom": "^17.0.2",
-    "react-grid-system": "8.0.1",
+    "gatsby": "4.12.1",
+    "gatsby-plugin-image": "2.12.1",
+    "gatsby-plugin-manifest": "4.12.1",
+    "gatsby-plugin-nprogress": "4.12.1",
+    "gatsby-plugin-offline": "5.12.1",
+    "gatsby-plugin-react-helmet": "5.12.1",
+    "gatsby-plugin-sass": "^5.11.1",
+    "gatsby-plugin-sharp": "4.12.1",
+    "gatsby-plugin-styled-components": "5.12.1",
+    "gatsby-transformer-sharp": "4.12.1",
+    "react": "18.0.0",
+    "react-dom": "^18.0.0",
+    "react-grid-system": "8.1.3",
     "react-helmet": "latest",
     "react-pure-modal": "^2.1.0",
-    "sass": "^1.49.8",
-    "styled-components": "5.3.3"
+    "sass": "^1.50.0",
+    "styled-components": "5.3.5"
   },
   "scripts": {
     "build": "gatsby build",
